RESOLVED FIXED303202
[blocks-in-inline] Fix imported/w3c/web-platform-tests/css/CSS2/normal-flow/block-in-inline-hittest-margin.html/block-in-inline-hittest-relpos-zindex.html
https://bugs.webkit.org/show_bug.cgi?id=303202
Summary [blocks-in-inline] Fix imported/w3c/web-platform-tests/css/CSS2/normal-flow/b...
alan
Reported 2025-11-27 08:14:19 PST
ssia
Attachments
Patch (3.70 KB, patch)
2025-11-27 08:41 PST, alan
ews-feeder: commit-queue-
[fast-cq]Patch (3.73 KB, patch)
2025-11-27 09:52 PST, alan
no flags
alan
Comment 1 2025-11-27 08:41:03 PST
alan
Comment 2 2025-11-27 09:52:04 PST
Created attachment 477537 [details] [fast-cq]Patch
EWS
Comment 3 2025-11-27 12:26:31 PST
Committed 303614@main (902ef19a873c): <https://commits.webkit.org/303614@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 477537 [details].
Radar WebKit Bug Importer
Comment 4 2025-11-27 12:27:12 PST
Note You need to log in before you can comment on or make changes to this bug.