[blocks-in-inline] Fix imported/w3c/web-platform-tests/css/CSS2/normal-flow/block-in-inline-hittest-margin.html/block-in-inline-hittest-relpos-zindex.html https://bugs.webkit.org/show_bug.cgi?id=303202

Reviewed by Antti Koivisto.

When hittesting the margin area of a block nested in inline box(es), similarly to
continuation code, blocks-in-inline has to find and return the enclosing inline box.

Test: fast/inline/blocks-in-inline-hit-test-margin.html

* LayoutTests/fast/inline/blocks-in-inline-hit-test-margin-expected.html: Added.
* LayoutTests/fast/inline/blocks-in-inline-hit-test-margin.html: Added.
* Source/WebCore/rendering/RenderBlock.cpp:
(WebCore::RenderBlock::nodeForHitTest const):

Canonical link: https://commits.webkit.org/303614@main